# AdoptPet

./: .gitignore  .pre-commit-config.yaml  commands.md  docker-compose.yml
backend/: .flake8  Dockerfile  Makefile  clean_migrations.sh  pyproject.toml  run_migrations.sh  schema.yml  setup.cfg
backend/abstract/: constants.py
backend/apps/authentication/: serializers.py  urls.py  views.py
backend/apps/order/: urls.py  views.py
backend/apps/pet/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/apps/pet/migrations/: 0001_initial.py  0002_alter_pet_gender.py  0002_pet_city.py  0002_pet_pet_photo_url.py  0002_remove_pet_pet_index.py  0003_alter_pet_pet_photo_url.py  0003_pet_pet_key_pet_slug.py  0004_alter_pet_pet_photo_url.py  0005_alter_pet_pet_photo_url.py  0006_alter_pet_pet_photo_url.py  0007_pet_pet_photo_link_alter_pet_pet_photo_url.py  0008_alter_pet_pet_photo_url.py  0009_alter_pet_pet_photo_link_alter_pet_pet_photo_url.py
backend/apps/posts/: admin.py  helpers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_alter_post_categories.py  0003_alter_category_slug_alter_post_categories_and_more.py  0004_alter_post_categories.py  0005_alter_post_categories.py  0006_alter_post_categories.py  0007_alter_category_name.py  0008_alter_post_title.py
backend/apps/transaction/: admin.py  helpers.py  models.py  serializers.py  urls.py  validate_field.py  views.py
backend/apps/transaction/migrations/: 0001_initial.py  0002_alter_transaction_adopted_pet_slug_and_more.py  0003_remove_transaction_confirmations.py  0004_transaction_confirmations.py  0005_transaction_session.py  0006_rename_session_transaction_session_id.py
backend/apps/upload/: models.py  urls.py  views.py
backend/apps/upload/migrations/: 0001_initial.py
backend/apps/user_profile/: admin.py  models.py
backend/apps/user_profile/migrations/: 0001_initial.py  0002_initial.py  0002_remove_profile_full_name_profile_wallet_address.py  0003_profile_profile_photo_url.py  0003_remove_profile_wallet_address_profile_full_name.py  0004_alter_profile_profile_photo_url.py  0005_alter_profile_managers.py  0006_alter_profile_managers.py
backend/apps/users/: admin.py  forms.py  helpers.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_customuser_username.py  0003_alter_customuser_username.py  0007_initial.py  (+4 more)
backend/config/: base.py  helpers.py  settings.py  storage_backends.py  urls.py
backend/config/settings/: __init__.py  development.py  production.py
backend/config/tests/: conftest.py  factories.py
backend/infrastructure/: test_data_clear.py
backend/middleware/: metric.py
backend/scripts/: benchmarks.py
(+50 files in other folders)
