[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Riad Elimemmedov <riad.elimemmedov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
django = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
