[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Riad Elimemmedov <riad.elimemmedov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
django = "^5.0.1"
boto3 = "^1.34.32"
httpx = "^0.26.0"
coverage = "^7.4.1"
django-cleanup = "^8.1.0"
django-jet-reboot = "^1.3.7"
django-money = "^3.4.1"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
factory-boy = "^3.3.0"
faker = "^22.6.0"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
python-decouple = "^3.8"
django-extensions = "^3.2.3"
feedparser = "^6.0.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
